# malmo

./: README.md  meson.build
benchmark/: benchmark.cpp  meson.build
include/malmo/: forward_list_pool.hpp  list.hpp  ordered_list.hpp  pyramid.hpp
test/: forward_list_pool.test.hpp  list.test.hpp  meson.build  ordered_list.test.hpp  pyramid.test.hpp  test.cpp
